freedata = \
	emi.dat \
	font.dat \
	font.ttf \
	gradient.dat \
	icon.bmp \
	levels.dat \
	map.dat \
	map_top.dat \
	tiles.dat \
	tiles_reflect.dat \
	title.dat \
	sound-crack.ogg \
	sound-death.ogg \
	sound-explode-big.ogg \
	sound-explode-small.ogg \
	sound-floater-enter.ogg \
	sound-ice.ogg \
	sound-laser.ogg \
	sound-trampoline.ogg \
	sound-used-antiice.ogg \
	sound-used-jump.ogg \
	sound-win.ogg
freeinfo = \
	sound-crack.ogg.xml \
	sound-death.ogg.xml \
	sound-explode-big.ogg.xml \
	sound-explode-small.ogg.xml \
	sound-floater-enter.ogg.xml \
	sound-ice.ogg.xml \
	sound-laser.ogg.xml \
	sound-trampoline.ogg.xml \
	sound-used-antiice.ogg.xml \
	sound-used-jump.ogg.xml \
	sound-win.ogg.xml
nonfreedata = \
	music-ending-nonfree.ogg \
	music-game-nonfree.ogg \
	music-game-nonfree-1.ogg \
	sound-builder-nonfree.ogg \
	sound-collapse-nonfree.ogg \
	sound-found-antiice-nonfree.ogg \
	sound-found-jump-nonfree.ogg \
	sound-lift-down-nonfree.ogg \
	sound-lift-up-nonfree.ogg \
	sound-spinner-nonfree.ogg
nonfreeinfo = \
	music-ending-nonfree.ogg.xml \
	music-game-nonfree-1.ogg.xml \
	music-game-nonfree.ogg.xml \
	sound-builder-nonfree.ogg.xml \
	sound-collapse-nonfree.ogg.xml \
	sound-found-antiice-nonfree.ogg.xml \
	sound-found-jump-nonfree.ogg.xml \
	sound-lift-down-nonfree.ogg.xml \
	sound-lift-up-nonfree.ogg.xml \
	sound-spinner-nonfree.ogg.xml
	
datadir = $(DATADIR)
data_DATA = $(freedata) $(nonfreedata)
EXTRA_DIST = $(freedata) $(freeinfo) $(nonfreedata) $(nonfreeinfo)
